# wepoll2

./: .clang-format  Cargo.toml  README.md
.cargo/: config.toml
include/: wepoll.h
src/: ffi.rs  io.rs  lib.rs  lock.rs  map.rs  wait.rs
tests/: connect.rs  precision.rs  timeout.rs  waitable.rs
