[package]
name = "wepoll2"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
errno = { version = "0.3.9", default-features = false }
hashbrown = { version = "0.14.5", features = ["nightly", "raw"] }
libc = { version = "0.2.168", default-features = false }
lock_api = { version = "0.4.12", features = ["nightly"] }
windows-sys = { version = "0.59.0", features = [
    "Wdk_Foundation",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_IO",
] }

[dev-dependencies]
socket2 = "0.5.7"
windows-sys = { version = "0.59.0", features = ["Win32_Security"] }

[features]
default = []
std = ["errno/std", "libc/std"]

[profile.release]
lto = true
codegen-units = 1
